国内部署推荐

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,21 +1,23 @@
-FROM python:3.12.3-slim-bullseye
+FROM registry.cn-hangzhou.aliyuncs.com/strangerbell/python:3.12.3-slim-bullseye
 
 ENV POETRY_VERSION 1.4.1
 
-# Install system dependencies
-RUN pip install "poetry==$POETRY_VERSION"
+# 使用阿里云镜像源安装 Poetry 包管理工具
+RUN pip install -i https://mirrors.aliyun.com/pypi/simple/ poetry
 
 # Set work directory
 WORKDIR /app
 
-# Copy only requirements to cache them in docker layer
-COPY poetry.lock pyproject.toml /app/
+# 复制项目依赖文件到容器中的 /app 目录
+COPY ./poetry.lock ./pyproject.toml /app/
 
-# Disable the creation of virtual environments
-RUN poetry config virtualenvs.create false
+# 配置 Poetry 源并重新生成 lock 文件
+RUN poetry config virtualenvs.create false && \
+    poetry source add --priority=primary aliyun https://mirrors.aliyun.com/pypi/simple/ && \
+    poetry lock --no-update
 
-# Install dependencies
-RUN poetry install
+# 安装依赖
+RUN poetry install --no-interaction --no-ansi --no-cache
 
 # Copy the current directory contents into the container at /app
 COPY ./ /app/
